--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Todo</title>
-</head>
-<body>
-    <h1>Hello world 2!!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block head %}
+    <title>Home Page</title>
+{% endblock %}
+
+{% block body %}
+    <h1>Hello World 3!!</h1>
+{% endblock %}
+```
